--- a/src/components/Footer/Styles.module.scss
+++ b/src/components/Footer/Styles.module.scss
@@ -146,7 +146,7 @@
 
 .navItem {
   padding: 0;
-  margin: 0;
+  margin: 5px 0 0 0;
   @include font-size($text-small);
   @include links-on-light;
 
