--- a/src/pages/change-how-you-eat/Styles.module.scss
+++ b/src/pages/change-how-you-eat/Styles.module.scss
@@ -6,3 +6,7 @@
 
 
 
+.stopsImg {
+  background: url('../../../static/images/Photos/stopsEat.jpg') no-repeat top center;
+  background-size: cover;
+}
