finishing homepage styling

--- a/src/components/AuthorCard/Styles.module.scss
+++ b/src/components/AuthorCard/Styles.module.scss
@@ -6,7 +6,7 @@
 
 
 .authorCard {
-  background: $grayLight;
+  background: $grayLightest;
   border-radius: $borderRadius;
   display: flex;
   padding: 5%;
