--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -17,7 +17,7 @@ $whiteFaded: rgba($white, 0.7);
 
 $gray: #616771;
 $grayDark: #62646F;
-$grayLight: #EAEAED;
+$grayLight: #E2E6E7;
 $grayLightest: #F2F4F5;
 $grayBorder: #DDE0E5;
 
