--- a/src/pages/change-how-you-eat/Styles.module.scss
+++ b/src/pages/change-how-you-eat/Styles.module.scss
@@ -10,3 +10,8 @@
   background: url('../../../static/images/Photos/stopsEat.jpg') no-repeat top center;
   background-size: cover;
 }
+
+.tldrImg {
+  background: url('../../../static/images/Photos/globe.jpg') no-repeat top center;
+  background-size: cover;
+}
