--- a/src/components/ChoiceGrid/Styles.module.scss
+++ b/src/components/ChoiceGrid/Styles.module.scss
@@ -30,6 +30,7 @@
 }
 
 
+
 .inner {
   @include pad-bot-large;
   justify-content: space-between;
@@ -188,3 +189,38 @@
 .choiceReadTime {}
 .choiceReadStatus {}
 
+
+
+/* subscribe */
+
+
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  padding-top: 5px;
+  align-content: center;
+  align-items: center;
+  margin: 25px auto 0;
+  width: auto;
+  @include mq('tablet') {
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 70px;
+  }
+  @include mq('desktop') {
+    margin-top: 110px;
+  }
+}   
+.subscribeTitle {
+  margin: 0 0 20px 0;
+  text-align: center;
+  @include font-size($text-large);
+  @include mq('tablet') {
+    margin: 0 30px 0 0;
+  }
+}
+
+.ctaButton {
+  @include no-underline;
+    margin: 0;
+}
