--- a/src/components/ShareSocialCta/Styles.module.scss
+++ b/src/components/ShareSocialCta/Styles.module.scss
@@ -49,6 +49,7 @@
   flex-direction: column;
   align-items: center;
   background-color: $white;
+  box-shadow: 0 1px 13px 0 rgba($white,0.50);
   color: $black;
   width: 90%;
   padding: 1.25em 5%;
