Styling read status

--- a/src/components/ChoiceGrid/Styles.module.scss
+++ b/src/components/ChoiceGrid/Styles.module.scss
@@ -187,9 +187,19 @@
 }
 
 .choiceReadTime {}
-.choiceReadStatus {}
 
+.choiceReadStatus {
+  display: flex;
+  align-items: center;
+}
 
+.choiceReadStatusRead {
+  color: $green;
+  font-weight: bold;
+  img {
+    margin-right: 4px;
+  }
+}
 
 /* subscribe */
 
