--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -10,6 +10,7 @@ $green: #00B364;
 $pink: #F281AC;
 $yellow: #EFAF4B;
 $yellowLight: #FFE1B2;
+$cream: #FFF4DD;
 $greenLight: #D7F3E7;
 $blueLight: #E9EFFA;
 
