--- a/src/components/VideoModal/styles.module.scss
+++ b/src/components/VideoModal/styles.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/Variables.module.scss";
+@import "../../styles/Mixins.module.scss";
 
 .modalStyles {
   background-color: $white;
@@ -6,8 +7,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: max-content;
-  height: 400px;
+  width: 275px;
+  height: 275px;
   box-shadow: 0 1px 40px 0 rgba(50, 47, 68, 0.2);
   padding: 1.5em;
   display: flex;
@@ -15,9 +16,25 @@
   align-items: center;
   flex-direction: column;
   z-index: 99;
+  @include mq("tablet") {
+    width: 500px;
+    height: 500px;
+  }
 }
 
 .link {
   color: #396abf !important;
   cursor: pointer;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 60px;
+}
+
+.closeButton {
+  background-color: transparent;
+  border: 0;
 }
