Adding link in banner to tldr

--- a/src/pages/change-how-you-eat/Styles.module.scss
+++ b/src/pages/change-how-you-eat/Styles.module.scss
@@ -7,11 +7,11 @@
 
 
 .stopsImg {
-  background: url('../../../static/images/Photos/stopsEat.jpg') no-repeat top center;
+  background: url('../../components/Images/Photos/stopsEat.jpg') no-repeat top center;
   background-size: cover;
 }
 
 .tldrImg {
-  background: url('../../../static/images/Photos/globe.jpg') no-repeat top center;
+  background: url('../../components/Images/Photos/globe.jpg') no-repeat top center;
   background-size: cover;
 }
