--- a/src/components/VideoModal/styles.module.scss
+++ b/src/components/VideoModal/styles.module.scss
@@ -33,6 +33,8 @@
 .link {
   color: #396abf !important;
   cursor: pointer;
+  font-weight: 600 !important;
+  font-family: $sans !important;
 }
 
 .buttonContainer {
