--- a/src/components/ConvincedButton/styles.module.scss
+++ b/src/components/ConvincedButton/styles.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/Mixins.module.scss";
 @import "../../styles/Typography.module.scss";
 
-// move these styles to globals
+// TODO: move these styles to globals
 .ctas {
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
   }
 }
 
-// move these styles to globals
+// TODO: move these styles to globals
 .ctaSecondary {
   @include links-on-dark;
   margin-top: 30px;
