--- a/src/components/ConvincedButton/styles.module.scss
+++ b/src/components/ConvincedButton/styles.module.scss
@@ -3,21 +3,8 @@
 @import "../../styles/Typography.module.scss";
 
 // TODO: move these styles to globals
-.ctas {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  margin-top: 30px;
-  @include mq("tablet") {
-    margin-top: 40px;
-    flex-direction: row;
-  }
-}
-
-// TODO: move these styles to globals
 .ctaSecondary {
+  margin-left: 1em;
   @include links-on-dark;
   margin-top: 30px;
   font-size: 21px;
