--- a/src/styles/Typography.module.scss
+++ b/src/styles/Typography.module.scss
@@ -185,7 +185,7 @@ h2 {
 
 h3 {
   margin: 0 0 0.5em 0;
-  @include font-size($title-small);
+  @include font-size($text-large);
   color: $black;
 }
 
