building change how you travel page

--- a/src/styles/Buttons.module.scss
+++ b/src/styles/Buttons.module.scss
@@ -115,7 +115,7 @@
 .btn-simple.btn-md,
 .btn-gradient.btn-md {
   font-size: 21px;
-  padding: 17px 30px ;
+  padding: 17px 30px 21px;
   font-family: inherit;
 
 }
